* FEA#9186 Data partitioning by portfolio

Version 2.0 - 2018-04-13
Version 1.14 - 2017-11-09
* BUG #7110 Typo in the distribution default portfolio multivalue's __name__

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02
* FEA#0000 Module creation