@@ -7,7 +7,6 @@ this repository contains the full copyright notices and license terms. -->
         <!-- ######### Claims  -->
         <record model="ir.rule.group" id="rule_group_portfolio_claim">
             <field name="model" search="[('model', '=', 'claim')]"/>
-            <field name="global_p" eval="True"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="True"/>
             <field name="perm_create" eval="True"/>
@@ -25,7 +24,6 @@ this repository contains the full copyright notices and license terms. -->
         <!-- ######### Losses  -->
         <record model="ir.rule.group" id="rule_group_portfolio_loss">
             <field name="model" search="[('model', '=', 'claim.loss')]"/>
-            <field name="global_p" eval="True"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="True"/>
             <field name="perm_create" eval="True"/>
